# CyberMesh

./: .dockerignore  .gitignore  E2E_TEST_REPORT.md  Makefile  README.md  go.mod  go.sum
sentinel/: .env.example  .gitignore  CYBERMESH_INTEGRATION_GUIDE.md  GAP_ANALYSIS_COMPLETE.md  OSS-REPOS-VERIFIED.md  PENDING.md  PHASE0-spec.md  PHASE0_ground_truth.md  PHASE1-TODO.md  PHASE1_contracts_spec.md  PHASE2-TODO.md  PHASE3-TODO.md  PHASE3_SCHEMA_NOTES.md  PHASE4-TODO.md  PHASE4-load-profile.md  PHASE8_full_solution.md  PHASES-standalone.md  PRD-hybrid-sentinel.md  PRD-oss-integration.md  README.md  SOP_cybermesh_integration.md  TODO-hybrid.txt  main.py  pyproject.toml  pytest.ini  requirements.txt
sentinel/api/: .env.example  .gitignore  Dockerfile  __init__.py  requirements.txt  run.py  setup_database.py  supabase_schema.sql
sentinel/rules/: processing_stats.txt
sentinel/scripts/: bench_phase2.py  bench_phase3.py  build_eval_dataset.py  calibrate_from_benchmark.py  calibrate_providers.py  calibrate_simple.py  calibration_ember.py  calibration_ember_v2.py  check_available_data.py  collect_calibration_data.py  collect_datasets.py  collect_fast.py  collect_samples.py  convert_manifest.py  debug_fp.py  download_malware_samples.py  examine_ember.py  extract_oss_outputs.py  false_positive_audit.py  gate_telemetry_duration_quality.py  gateway_coverage.py  gateway_determinism_check.py  kafka_gateway.py  merge_determinism_stress.py  opa_reachable_check.py  oss_ingest.py  phase4_curated_validate.py  phase4_e2e_replay.py  phase4_hardening_checks.py  phase4_loadtest.py  phase4_reliability_checks.py  phase4_sla_eval.py  (+3 more)
(+1510 files in other folders)
