[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel"
version = "0.1.0"
description = "Agentic file scanner with multi-model detection"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "CyberMesh Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
]
dependencies = [
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "httpx>=0.27.0",
    "openai>=1.0.0",
    "lightgbm>=4.0.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "joblib>=1.3.0",
    "pefile>=2023.2.7",
    "oletools>=0.60.0",
    "pypdf>=3.0.0",
    "cryptography>=41.0.0",
    "jinja2>=3.1.0",
    "pillow>=10.0.0",
]

[project.optional-dependencies]
kafka = ["confluent-kafka>=2.3.0", "protobuf>=4.24.0"]
yara = ["yara-python>=4.3.0"]
dev = ["pytest>=7.0.0", "pytest-asyncio>=0.21.0", "black", "ruff"]

[project.scripts]
sentinel = "sentinel.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["sentinel*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]
ignore = ["E501"]
